--- a/index.html
+++ b/index.html
@@ -12,14 +12,18 @@
   </style>
 </head>
 <body>
-  <div class="card">
-    <img src="images/image-qr-code.png" alt="qr-code"><br>
-    <h1>Improve your front-end skills by building projects</h1>
-    <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-  </div>
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="https://github.com/luciferad">luciferad</a>.
-  </div>
+  <main role="main">
+    <div class="card">
+      <img src="images/image-qr-code.png" alt="qr-code"><br>
+      <h1>Improve your front-end skills by building projects</h1>
+      <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+    </div>
+  </main>
+  <footer role="contentinfo">
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="https://github.com/luciferad">luciferad</a>.
+    </div>
+  </footer>
 </body>
 </html>
